Cheat Button and EntryLock enabled, ScoreBoard cleared

--- a/GoCry/data/CryDB.properties
+++ b/GoCry/data/CryDB.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.5.1
-#Wed Jan 20 14:57:02 CET 2021
-tx_timestamp=398208
-modified=no
+#Wed Jan 20 15:29:21 CET 2021
+tx_timestamp=403373
+modified=yes
 version=2.5.1
