Cheat Button and EntryLock enabled, ScoreBoard cleared

--- a/GoCry/data/CryDB.properties
+++ b/GoCry/data/CryDB.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.5.1
-#Wed Jan 20 15:29:21 CET 2021
-tx_timestamp=403373
-modified=yes
+#Wed Jan 20 19:47:04 CET 2021
+tx_timestamp=469000
+modified=no
 version=2.5.1
