--- a/GoCry/data/CryDB.properties
+++ b/GoCry/data/CryDB.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.5.1
-#Fri Jan 22 18:16:12 CET 2021
-tx_timestamp=604696
-modified=no
+#Fri Jan 22 19:11:12 CET 2021
+tx_timestamp=628306
+modified=yes
 version=2.5.1
