--- a/GoCry/data/CryDB.properties
+++ b/GoCry/data/CryDB.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.5.1
-#Fri Jan 22 19:11:12 CET 2021
-tx_timestamp=628306
-modified=yes
+#Fri Jan 22 23:43:57 CET 2021
+tx_timestamp=639534
+modified=no
 version=2.5.1
